src/test/ui/parser/mismatched-braces/missing-close-brace-in-trait.stderr
error: this file contains an un-closed delimiter
  --> $DIR/missing-close-brace-in-trait.rs:12:66
   |
LL | trait T {
   |         - un-closed delimiter
...
LL | fn main() {}
   |                                                                  ^

error: expected one of `async`, `const`, `extern`, `fn`, `type`, or `unsafe`, found keyword `struct`
  --> $DIR/missing-close-brace-in-trait.rs:5:12
   |
LL | pub(crate) struct Bar<T>();
   |            ^^^^^^ expected one of `async`, `const`, `extern`, `fn`, `type`, or `unsafe`

error[E0601]: `main` function not found in crate `missing_close_brace_in_trait`
  --> $DIR/missing-close-brace-in-trait.rs:1:1
   |
LL | / trait T {
LL | |
LL | |     fn foo(&self);
LL | |
...  |
LL | |
LL | | fn main() {}
   | |_________________________________________________________________^ consider adding a `main` function to `$DIR/missing-close-brace-in-trait.rs`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0601`.
